cargo-features = ["strip"]

[package]
name = "codercar-rust"
version = "0.2.0"
authors = ["Matthew Piercey <matthew@botinabox.ca"]
edition = "2018"

[profile.release]
strip = "symbols"

[dependencies]
rppal = "0.11.3"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
openssl = { version = "0.10.29", features = ["vendored"] }
tokio-tungstenite = "0.10.1"
futures-channel = "0.3.4"
futures-util = "0.3.4"
tungstenite = "0.10.1"
tokio = { version = "0.2.18", features = ["full"] }
url = "2.1.1"
clap = { git = "https://github.com/clap-rs/clap", features = ["yaml"] }
local_ipaddress = "0.1.3"
ansi_term = "0.12.1"
confy = "0.4.0"
